// Vitest Snapshot v1

exports[`Drawer > Drawer attachParentVue demo works fine 1`] = `
<div
  class="t-container"
  data-v-241b7623=""
>
  <div
    class="t-suf-container"
    data-v-241b7623=""
  >
    <t-drawer
      data-v-241b7623=""
      header="抽屉标题"
      mode="overlay"
      placement="right"
      showinattachedelement=""
    >
      <p
        data-v-241b7623=""
      >
        抽屉的内容
      </p>
    </t-drawer>
    <div
      class="tdesign-radio-button"
      data-v-241b7623=""
    >
       抽屉弹出方向： 
      <t-radio-group
        data-v-241b7623=""
      >
        <t-radio-button
          data-v-241b7623=""
          value="left"
        >
          左侧
        </t-radio-button>
        <t-radio-button
          data-v-241b7623=""
          value="right"
        >
          右侧
        </t-radio-button>
        <t-radio-button
          data-v-241b7623=""
          value="top"
        >
          上方
        </t-radio-button>
        <t-radio-button
          data-v-241b7623=""
          value="bottom"
        >
          下方
        </t-radio-button>
      </t-radio-group>
    </div>
    <br
      data-v-241b7623=""
    />
    <div
      class="tdesign-radio-button"
      data-v-241b7623=""
    >
       抽屉弹出模式： 
      <t-radio-group
        data-v-241b7623=""
      >
        <t-radio-button
          data-v-241b7623=""
          value="overlay"
        >
          overlay
        </t-radio-button>
        <t-radio-button
          data-v-241b7623=""
          value="push"
        >
          push
        </t-radio-button>
      </t-radio-group>
    </div>
    <br
      data-v-241b7623=""
    />
    <br
      data-v-241b7623=""
    />
    <t-button
      data-v-241b7623=""
      variant="outline"
    >
      打开抽屉
    </t-button>
  </div>
</div>
`;

exports[`Drawer > Drawer baseVue demo works fine 1`] = `
<div
  data-v-18b3c170=""
>
  <t-drawer
    closebtn="true"
    data-v-18b3c170=""
    header="抽屉标题"
    onconfirm="function () { [native code] }"
  >
    <p
      data-v-18b3c170=""
    >
      抽屉的内容
    </p>
  </t-drawer>
  <t-button
    data-v-18b3c170=""
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer customVue demo works fine 1`] = `
<div>
  <t-drawer
    closebtn="true"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <t-drawer
    closebtn="true"
    footer="function () { [native code] }"
    header="function () { return '抽屉标题'; }"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <t-drawer
    cancelbtn="取消"
    closebtn="true"
    confirmbtn="[object Object]"
    header="抽屉标题"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <t-button
    variant="outline"
  >
    打开(插槽定义)
  </t-button>
      
  <t-button
    variant="outline"
  >
    打开(属性定义)
  </t-button>
      
  <t-button
    variant="outline"
  >
    打开(单独设置确认/取消按钮)
  </t-button>
</div>
`;

exports[`Drawer > Drawer destroyVue demo works fine 1`] = `
<div>
  <t-drawer
    destroyonclose=""
    header="抽屉标题"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <t-button
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer noMaskVue demo works fine 1`] = `
<div>
  <t-drawer
    header="抽屉标题"
    onconfirm="function () { [native code] }"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <t-button
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer operationVue demo works fine 1`] = `
<div
  data-v-c1a23f50=""
>
  <t-drawer
    data-v-c1a23f50=""
    header="抽屉标题"
    onconfirm="function () { [native code] }"
  >
    <div
      class="t-drawer-demo-div"
      data-v-c1a23f50=""
    >
      <span
        data-v-c1a23f50=""
      >
        标签 A
      </span>
      <t-input
        data-v-c1a23f50=""
      />
    </div>
    <div
      class="t-drawer-demo-div"
      data-v-c1a23f50=""
    >
      <span
        data-v-c1a23f50=""
      >
        标签 B
      </span>
      <t-input
        data-v-c1a23f50=""
      />
    </div>
    <div
      class="t-drawer-demo-div"
      data-v-c1a23f50=""
    >
      <span
        data-v-c1a23f50=""
      >
        标签 C
      </span>
      <t-input
        data-v-c1a23f50=""
      />
    </div>
  </t-drawer>
  <t-button
    data-v-c1a23f50=""
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer placementVue demo works fine 1`] = `
<div
  data-v-6ffb2ed6=""
>
  <t-drawer
    data-v-6ffb2ed6=""
    header="抽屉标题"
    onconfirm="function () { return (_vm.visible = false); }"
    onoverlayclick="function () { return (_vm.visible = false); }"
    placement="right"
  >
    <p
      data-v-6ffb2ed6=""
    >
      抽屉的内容
    </p>
  </t-drawer>
  <div
    class="tdesign-radio-button"
    data-v-6ffb2ed6=""
  >
    <t-radio-group
      data-v-6ffb2ed6=""
      defaultvalue="right"
    >
      <t-radio-button
        data-v-6ffb2ed6=""
        value="left"
      >
        左侧
      </t-radio-button>
      <t-radio-button
        data-v-6ffb2ed6=""
        value="right"
      >
        右侧
      </t-radio-button>
      <t-radio-button
        data-v-6ffb2ed6=""
        value="top"
      >
        上方
      </t-radio-button>
      <t-radio-button
        data-v-6ffb2ed6=""
        value="bottom"
      >
        下方
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-button
    class="btn-top-margin"
    data-v-6ffb2ed6=""
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer popupVue demo works fine 1`] = `
<div>
  <t-drawer
    attach="body"
    header="抽屉标题"
    mode="push"
    placement="right"
  >
    <p>
      抽屉的内容
    </p>
  </t-drawer>
  <div
    class="tdesign-radio-button"
  >
     抽屉弹出模式： 
    <t-radio-group>
      <t-radio-button
        value="overlay"
      >
        overlay
      </t-radio-button>
      <t-radio-button
        value="push"
      >
        push
      </t-radio-button>
    </t-radio-group>
  </div>
  <br />
  <br />
  <t-button
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer sizeDraggableVue demo works fine 1`] = `
<div
  data-v-c9000ec0=""
>
  <t-drawer
    data-v-c9000ec0=""
    header="抽屉标题"
    onconfirm="function () { return (_vm.visible = false); }"
    onoverlayclick="function () { return (_vm.visible = false); }"
    placement="right"
    sizedraggable="true"
  >
    <p
      data-v-c9000ec0=""
    >
      抽屉的内容
    </p>
  </t-drawer>
  <div
    class="tdesign-radio-button"
    data-v-c9000ec0=""
  >
    <t-radio-group
      data-v-c9000ec0=""
      defaultvalue="right"
    >
      <t-radio-button
        data-v-c9000ec0=""
        value="left"
      >
        从左侧拖拽抽屉
      </t-radio-button>
      <t-radio-button
        data-v-c9000ec0=""
        value="right"
      >
        从右侧拖拽抽屉
      </t-radio-button>
      <t-radio-button
        data-v-c9000ec0=""
        value="top"
      >
        从上方拖拽抽屉
      </t-radio-button>
      <t-radio-button
        data-v-c9000ec0=""
        value="bottom"
      >
        从下方拖拽抽屉
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-button
    class="btn-top-margin"
    data-v-c9000ec0=""
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;

exports[`Drawer > Drawer sizeVue demo works fine 1`] = `
<div
  data-v-9c68fac0=""
>
  <t-drawer
    data-v-9c68fac0=""
    header="抽屉标题"
    onconfirm="function () { return (_vm.visible = false); }"
    placement="right"
    size="small"
  >
    <p
      data-v-9c68fac0=""
    >
      抽屉的内容
    </p>
  </t-drawer>
  <div
    class="tdesign-radio-button"
    data-v-9c68fac0=""
  >
    <t-radio-group
      class="btn-top-margin"
      data-v-9c68fac0=""
      defaultvalue="small"
    >
      <t-radio-button
        data-v-9c68fac0=""
        value="small"
      >
        小
      </t-radio-button>
      <t-radio-button
        data-v-9c68fac0=""
        value="medium"
      >
        中
      </t-radio-button>
      <t-radio-button
        data-v-9c68fac0=""
        value="large"
      >
        大
      </t-radio-button>
      <t-radio-button
        data-v-9c68fac0=""
        value="200"
      >
        200
      </t-radio-button>
      <t-radio-button
        data-v-9c68fac0=""
        value="400px"
      >
        400px
      </t-radio-button>
      <t-radio-button
        data-v-9c68fac0=""
        value="50%"
      >
        50%
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-button
    class="btn-top-margin"
    data-v-9c68fac0=""
    variant="outline"
  >
    打开抽屉
  </t-button>
</div>
`;
